--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/olabee87-stack/ecommerce-backend#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "uuid": "^8.3.0",
     "validator": "^13.1.17"
   }
 }
